--- a/notebooks/pipeline_run_demo/pipeline_run_demo.ipynb
+++ b/notebooks/pipeline_run_demo/pipeline_run_demo.ipynb
@@ -62,26 +62,85 @@
    "outputs": [],
    "source": [
     "config = {\n",
-    "    \"feature_engineering\": \"Identity_v0_0_0\",\n",
-    "    \"feature_engineering_kwargs\": {},\n",
-    "    \"model\": \"LinearRegression_v0_0_0\",\n",
-    "    \"model_kwargs\": {\n",
-    "        **supervised_dataset.features,\n",
-    "    },\n",
+    "    \"cleaning\": [\n",
+    "        \n",
+    "    ],\n",
+    "    \"feature_engineering\": [\n",
+    "\n",
+    "    ],\n",
+    "    \"model\": [\"LinearRegression_v0_0_0\", supervised_dataset.features],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "9a516717",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prc_challenge.utils.load_object_in_file import load_object_in_file\n",
+    "\n",
+    "loaded_config = {\n",
+    "    \"cleaning\": [\n",
+    "        load_object_in_file(\n",
+    "            file_path=f\"../cleaning/__init__.py\", \n",
+    "            namespace=\"cleaning\", \n",
+    "            object_name=approach[0],\n",
+    "        )(**approach[1]) for approach in config[\"cleaning\"]\n",
+    "    ],\n",
+    "    \"feature_engineering\": [\n",
+    "        load_object_in_file(\n",
+    "            file_path=f\"../feature_engineering/__init__.py\", \n",
+    "            namespace=\"feature_engineering\", \n",
+    "            object_name=approach[0],\n",
+    "        )(**approach[1]) for approach in config[\"feature_engineering\"]\n",
+    "    ],\n",
+    "    \"model\": load_object_in_file(\n",
+    "        file_path=f\"../model/__init__.py\", \n",
+    "        namespace=\"model\", \n",
+    "        object_name=config[\"model\"][0],\n",
+    "    )(**config[\"model\"][1]),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f48b7499",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cleaning': [], 'feature_engineering': [], 'model': LinearRegression_v0_0_0()}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "5944e4ee",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'nominal_category': ['gender', 'department', 'department_name', 'division', 'assignment_category', 'employee_position_title'], 'ordinal_category': [], 'interval_numeric': ['year_first_hired'], 'ratio_numeric': [], 'natural_text': [], 'date': ['date_first_hired']}\n"
+     "ename": "KeyError",
+     "evalue": "'feature_engineering_kwargs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m model = \u001b[43mproblem\u001b[49m\u001b[43m.\u001b[49m\u001b[43msolve_using\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/projects/prc2025/repo/prc-challenge-2025/prc_challenge/problem/SupervisedRegression.py:47\u001b[39m, in \u001b[36mSupervisedRegression.solve_using\u001b[39m\u001b[34m(self, config)\u001b[39m\n\u001b[32m     45\u001b[39m train_X, train_Y = \u001b[38;5;28mself\u001b[39m.train_X, \u001b[38;5;28mself\u001b[39m.train_Y\n\u001b[32m     46\u001b[39m objects = load_objects_from_config(config)\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m feature_engineering = objects[\u001b[33m\"\u001b[39m\u001b[33mfeature_engineering\u001b[39m\u001b[33m\"\u001b[39m](**\u001b[43mobjects\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mfeature_engineering_kwargs\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[32m     48\u001b[39m train_X = feature_engineering.fit_transform(X=train_X)\n\u001b[32m     50\u001b[39m model = objects[\u001b[33m\"\u001b[39m\u001b[33mmodel\u001b[39m\u001b[33m\"\u001b[39m](**objects[\u001b[33m\"\u001b[39m\u001b[33mmodel_kwargs\u001b[39m\u001b[33m\"\u001b[39m])\n",
+      "\u001b[31mKeyError\u001b[39m: 'feature_engineering_kwargs'"
      ]
     }
    ],
@@ -91,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "58e0b4c3",
    "metadata": {},
    "outputs": [
@@ -130,7 +189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prc-challenge-2025 (3.13.9)",
+   "display_name": "prc-challenge-2025",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
