encore un push degueu

--- a/notebooks/pipeline_run_demo/pipeline_run_demo.ipynb
+++ b/notebooks/pipeline_run_demo/pipeline_run_demo.ipynb
@@ -34,16 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c96cb1fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prc_challenge.problem import SupervisedRegression\n",
-    "from prc_challenge.data import EmployeeSalary\n",
+    "from prc_challenge.problem import PrcChallenge\n",
     "\n",
-    "supervised_dataset = EmployeeSalary()\n",
-    "problem = SupervisedRegression(supervised_dataset=supervised_dataset)"
+    "problem = PrcChallenge(\n",
+    "    flights_test_size=200,\n",
+    "    seed=1,\n",
+    ")"
    ]
   },
   {
