--- a/notebooks/pipeline_run_demo/pipeline_run_demo.ipynb
+++ b/notebooks/pipeline_run_demo/pipeline_run_demo.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "86535aa0",
    "metadata": {},
    "outputs": [],
@@ -69,60 +69,19 @@
     "    \"feature_engineering\": [\n",
     "\n",
     "    ],\n",
-    "    \"model\": [\"LinearRegression_v0_0_0\", supervised_dataset.features],\n",
+    "    \"model\": [\"RawCatboost_v0_0_0\", supervised_dataset.features],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9a516717",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prc_challenge.utils.load_object_in_file import load_object_in_file\n",
+    "loaded_config = problem.load_config(config)\n",
     "\n",
-    "loaded_config = {\n",
-    "    \"cleaning\": [\n",
-    "        load_object_in_file(\n",
-    "            file_path=f\"../cleaning/__init__.py\", \n",
-    "            namespace=\"cleaning\", \n",
-    "            object_name=approach[0],\n",
-    "        )(**approach[1]) for approach in config[\"cleaning\"]\n",
-    "    ],\n",
-    "    \"feature_engineering\": [\n",
-    "        load_object_in_file(\n",
-    "            file_path=f\"../feature_engineering/__init__.py\", \n",
-    "            namespace=\"feature_engineering\", \n",
-    "            object_name=approach[0],\n",
-    "        )(**approach[1]) for approach in config[\"feature_engineering\"]\n",
-    "    ],\n",
-    "    \"model\": load_object_in_file(\n",
-    "        file_path=f\"../model/__init__.py\", \n",
-    "        namespace=\"model\", \n",
-    "        object_name=config[\"model\"][0],\n",
-    "    )(**config[\"model\"][1]),\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f48b7499",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'cleaning': [], 'feature_engineering': [], 'model': LinearRegression_v0_0_0()}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "loaded_config"
    ]
   },
