improved on problem definition

--- a/notebooks/pipeline_run_demo/pipeline_run_demo.ipynb
+++ b/notebooks/pipeline_run_demo/pipeline_run_demo.ipynb
@@ -64,25 +64,13 @@
    "source": [
     "config = {\n",
     "    \"cleaning\": [\n",
-    "        \n",
+    "        (\"remove_rows_with_missing_aircraft_type_in_FlightList\", ),\n",
     "    ],\n",
     "    \"feature_engineering\": [\n",
     "\n",
     "    ],\n",
     "    \"model\": [\"RawCatboost_v0_0_0\", supervised_dataset.features],\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a516717",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loaded_config = problem.load_config(config)\n",
-    "\n",
-    "loaded_config"
    ]
   },
   {
