add post cleaning

--- a/notebooks/pipeline_run_demo/pipeline_run_demo.ipynb
+++ b/notebooks/pipeline_run_demo/pipeline_run_demo.ipynb
@@ -63,16 +63,22 @@
    "source": [
     "config = {\n",
     "    \"cleaning\": [\n",
-    "        #[\"drop_idx_column\", {}]\n",
+    "        [\"CleanGeo_v0_0_0\", {}]\n",
     "    ],\n",
     "    \"feature_engineering\": [\n",
     "        [\"AddAircraftType_v0_0_0\", {}],\n",
+    "        #[\"AddingAircraftFeatures\", {}],\n",
     "        [\"AddFuelSegmentDuration_v0_0_0\", {}],\n",
-    "        [\"AddTimeSinceTakeOff_v0_0_0\", {\"method\": \"first_flight_timestamp\"}],\n",
+    "        [\"AddTimeSinceTakeOff_fromFlightList_v0_0_0\", {}],\n",
+    "        [\"TemporalFeatures\", {}],\n",
+    "        [\"AddGeoInfo_v0_0_0\", {\"method\":[\"mean_altitude[ft]\", \"range_altitude[ft]\", \"delta_altitude[ft]\", \"mean_TAS[kt]\", \"max_TAS[kt]\", \"mean_groundspeed[kt]\", \"mean_vertical_rate[ft/min]\", \"n_points\"]}],\n",
+    "        [\"AddTrajectoryFeatures_v0_0_1\", {}],\n",
     "        [\"DropIfExists_v0_0_0\", {\"columns\": [\"idx\", \"flight_id\"]}],\n",
-    "        [\"TemporalFeatures\", {}]\n",
     "    ],\n",
-    "    \"model\": [\"LinearRegression_v0_0_0\", {}],\n",
+    "    \"post_cleaning\":[\n",
+    "      [\"MaximumFuelSec_v0_0_0\", {}]\n",
+    "    ],\n",
+    "    \"model\": [\"Catboost_v0_0_0\", {}],\n",
     "}"
    ]
   },
@@ -99,62 +105,83 @@
       "start        datetime64[ns]\n",
       "end          datetime64[ns]\n",
       "dtype: object\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 432/432 [00:02<00:00, 166.47it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "Available features after feature engineering:\n",
-      "start                           datetime64[ns]\n",
-      "end                             datetime64[ns]\n",
-      "aircraft_type                           object\n",
-      "segment_duration[seconds]              float64\n",
-      "time_since_take_off[seconds]           float64\n",
-      "segment_duration                         int32\n",
-      "sin_day                                float64\n",
-      "cos_day                                float64\n",
-      "day_of_week                              int32\n",
+      "idx                                   int64\n",
+      "flight_id                            object\n",
+      "start                        datetime64[ns]\n",
+      "end                          datetime64[ns]\n",
+      "aircraft_type                        object\n",
+      "segment_duration[seconds]           float64\n",
       "dtype: object\n",
       "\n",
       "Starting training...\n",
+      "Preprocessing data for tuning...\n",
+      "Splitting data for tuning (internal train/validation split)...\n",
+      "No groups provided. Using random split.\n",
+      "Internal split: 84392 train samples, 21099 val samples.\n",
+      "\n",
+      "--- Starting Optuna Hyperparameter Search (CPU) ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2025-11-26 20:00:01,410] A new study created in RDB with name: CatBoostModel_20251126_200001\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b87e0634ee5847d797ce1a3f6b7b3dc2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[I 2025-11-26 20:00:04,704] Trial 0 finished with value: 313.4373794935109 and parameters: {'iterations': 890, 'learning_rate': 0.1778714759558905, 'depth': 6, 'l2_leaf_reg': 4.449256441133563, 'border_count': 35, 'bagging_temperature': 0.5576116342517604, 'random_strength': 0.0014458656587839611}. Best is trial 0 with value: 313.4373794935109.\n",
+      "\n",
+      "Optuna search finished.\n",
+      "Best Tuning (Validation) RMSE: 313.4374\n",
+      "\n",
+      "Fitting final model with best parameters...\n",
       "Finished training.\n",
-      "Starting validation evaluation...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 432/432 [00:02<00:00, 167.14it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting submission file creation...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 72/72 [00:00<00:00, 146.23it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Starting validation evaluation...\n",
+      "Starting submission file creation...\n",
+      "0        210.357610\n",
+      "1        204.478588\n",
+      "2        204.340141\n",
+      "3        204.478588\n",
+      "4        202.460661\n",
+      "            ...    \n",
+      "24284     69.760674\n",
+      "24285     98.861069\n",
+      "24286    135.413694\n",
+      "24287    348.017467\n",
+      "24288    646.308536\n",
+      "Name: y_pred, Length: 24289, dtype: float64\n",
+      "0        210.357610\n",
+      "1        204.478588\n",
+      "2        204.340141\n",
+      "3        204.478588\n",
+      "4        202.460661\n",
+      "            ...    \n",
+      "24284     69.760674\n",
+      "24285     98.861069\n",
+      "24286    135.413694\n",
+      "24287    348.017467\n",
+      "24288    646.308536\n",
+      "Name: y_pred, Length: 24289, dtype: float64\n",
       "Finished submission file creation.\n",
       "Finished validation evaluation.\n"
      ]
@@ -173,7 +200,7 @@
     {
      "data": {
       "text/plain": [
-       "{'rmse(train)': 429.4739262135786, 'rmse(valid)': 402.72237152928295}"
+       "{'rmse(train)': 314.70279450759773, 'rmse(valid)': 279.48143519678695}"
       ]
      },
      "execution_count": 5,
@@ -183,6 +210,35 @@
    ],
    "source": [
     "evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "408738be-40fb-486e-a137-6864461143e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b79dd27-3882-45f8-99b4-c0d39aea09b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importances = model.get_feature_importance()\n",
+    "feature_names = temp.columns\n",
+    "\n",
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.barh(feature_names, importances, color='skyblue')\n",
+    "plt.xlabel(\"Importance Score\")\n",
+    "plt.title(\"CatBoost Feature Importances\")\n",
+    "plt.gca().invert_yaxis()  # Highest importance at the top\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
